--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
-#container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
 
+
+button {
+    margin: auto;
+    width: 50%;
+    padding: 10px;  
+}
