--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 button {
     margin: auto;
@@ -15,4 +17,27 @@ display: flex;
 flex-direction: row;
 justify-content: space-evenly;
 align-items: center;
+}
+
+#infocontainer div {
+    width: 50%;
+}
+
+
+#mainCards {
+    display: flex;
+    justify-content: center;
+}
+
+#balance {
+    text-align: center;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+}
+
+#infobox {
+    text-align: center;
 }
